Thu May 27 11:58:33 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* objcopy.c (copy_archive): Preserve dates of archive members if
	requested.

	* readelf.c (dump_relocations): Always print the addend on RELA
	systems even if there is no symbol.
	(process_program_headers): Reset dynamic_size before looping
	through the program headers.
	(process_version_sections): Cast sh_offset to unsigned long for
	printing in case bfd_vma is wider.
	(process_symbol_table): Use get_symbol_index_type when printing
	st_shndx.

1999-05-17  DJ Delorie  <dj@cygnus.com>

	* windres.c: add verbose option
	(main): process verbose option
	* resrc.c (look_for_default): new.  Look for the default
	preprocessor in a given location.
	(read_rc_file): for foo/bar-windres, look for foo/bar-gcc,
	foo/gcc (in case of foo/windres), and then gcc (the old default).

1999-05-16  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c (deduce_name): New function: Deduce name of program to
	run.
	(mcore_elf_out_file): New variable: Name of mcore-elf output file.
	(mcore_elf_linker): New variable: Name of linker to use.
	(mcore_elf_linker_flags): New variable: Linker flags to pass.
	(scan_obj_file): Cache filenames if necessary.
	(usage): Document new command line options.
	(main): Support new command line options: -M (generate an
	mcore-elf output file) -L (name of linker to use) -F (flags to
	pass to linker). 
	(mcore_elf_cache_filename): Store a filename in a cache.
	(mcore_elf_gen_out_file): New function: Generate an output file
	per the mcore-elf spec.

1999-05-15  Nick Clifton  <nickc@cygnus.com>

	* configure.in (BUILD_MISC): Build dlltool for mcore
	* configure: Regenerate.
	* dlltool.c: Update example in comment.
	(DLLTOOL_MCORE): Define.
	(DLLTOOL_MCORE_ELF): Define.
	(DRECTVE_SECTION_NAME): Define.
	(mcore_be_jtab, mcore_le_jtab): Binary for performing an mcore
	jump to address.
	(mtable): Add entries for mcore variants.
	(rvaafter, rvabefore, asm_prefix): Add mcore suppport.